--- a/index.html
+++ b/index.html
@@ -6,18 +6,8 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Healthy Me</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.1.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.12.0",
-    "react/": "https://esm.sh/react@^19.1.1/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+    <meta name="description" content="AI-powered nutrition analysis for smarter food choices" />
+    <meta name="keywords" content="nutrition, health, AI, food analysis" />
 </head>
   <body class="bg-gray-50">
     <div id="root"></div>
