fix: force cache bust for Tailwind CDN removal

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Healthy Me</title>
+    <title>Healthy Me - AI Nutrition Assistant</title>
     <meta name="description" content="AI-powered nutrition analysis for smarter food choices" />
     <meta name="keywords" content="nutrition, health, AI, food analysis" />
+    <!-- Cache bust: 2025-01-04 -->
 </head>
   <body class="bg-gray-50">
     <div id="root"></div>
